stuf/src/p6/tests/t016.err
Semantic error on line 5: The animation block's parameter type (circle) does not match the parameter type specified in the forward statement (triangle).
